# Chess

./: .gitignore  FEN_notation.py  LICENSE  Procfile  README.md  asset.py  chess.py  client.py  commands.py  config.py  fly.toml  game.py  local.py  main.py  match.py  network.py  player.py  pyproject.toml  requirements.txt  scroll_canvas_example.py  server-requirements.txt  server.py  setup.cfg  test.sh  utils.py
chess/: board.py  chess_data.py  game.py  match.py  piece.py  piece_movement.py  player.py  validate_move.py
game_data/: hikaru_nakamura_latest_games.pgn  magnus_carlsen_latest_games.pgn
gui/: captured_gui.py  promotion_gui.py
src/: chess_logging.py  client.py  config.py  debug.py  local.py  main.py  server.py
src/chess/: board.py  chess_init.py  chess_logging.py  chess_player.py  chess_timer.py  game_surface.py  match.py  piece.py  piece_assets.py  piece_movement.py  player.py  validate_move.py
src/chess/asset/: asset_manager.py  chess_assets.py
src/chess/board/: board_tile.py  chess_board.py  chess_tile.py  side.py
src/chess/bot/: chess_bot_stockfish.py
src/chess/game/: chess_match.py  game_size.py  game_surface.py
src/chess/movement/: piece_movement.py  validate_move.py
src/chess/network/: chess_network.py  command_manager.py  server.py  server_c.py
src/chess/network/client/: chess_client.py
src/chess/network/commands/: client_commands.py  command.py  command_manager.py  server_commands.py
src/chess/network/server/: chess_server.py  server_user.py
src/chess/notation/: algebraic_notation.py  forsyth_edwards_notation.py  portable_game_notation.py
src/chess/timer/: chess_timer.py  timer_config.py
src/config/: logging_manager.py  pg_config.py  tk_config.py  user_config.py  user_config.txt
src/database/: chess_db.py  chess_db.session.sql  models.py
src/event/: event.py  event_manager.py  game_events.py  launcher_events.py  local_event_queue.py
src/gui/: available_moves_gui.py  board_axis_gui.py  button_gui.py  captured_gui.py  end_game_gui.py  game_over_gui.py  played_moves_gui.py  previous_move_gui.py  promotion_gui.py  timer_gui.py  verify_gui.py  yes_or_gui.py
src/launcher/: chess_launcher.py  chess_tkinter_launcher.py  single_player.py
src/launcher/pg/: multi_player_client.py  offline_launcher.py  online_launcher.py  pg_launcher.py
src/launcher/tk/: global_vars.py  launcher_user.py  page_frame.py  page_manager.py  tk_launcher.py
src/launcher/tk/components/: bot_config_comp.py  chat_component.py  connect_component.py  connected_users_component.py  local_server_component.py  network_play_comp.py  offline_play_comp.py  play_comp.py  server_lobby_component.py  settings_comp.py  time_config_comp.py  tk_component.py  user_comp.py
src/launcher/tk/page/: page_frame.py  page_manager.py
src/network/: chess_network.py  server_c.py
src/network/client/: chess_client.py
src/network/commands/: client_commands.py  command.py  command_manager.py  server_commands.py
src/network/server/: chess_server.py  server_lobby.py  server_user.py
src/utils/: algebraic_notation.py  asset.py  command_manager.py  commands.py  debug.py  forsyth_edwards_notation.py  network.py  portable_game_notation.py
tests/: conftest.py  test_with_played_games.py
tests/chess/: test_against_played_games.py  test_bishop_moves.py  test_check.py  test_check_mate.py  test_checkmate.py  test_king_moves.py  test_knight_moves.py  test_move_validity.py  test_pawn_moves.py  test_queen_moves.py  test_rook_moves.py
tests/chess/notation/: test_algebraic_notation.py  test_fen_notation.py
tests/game_logic/: test_check.py
tests/game_logic/movement/: test_bishop_moves.py  test_king_moves.py  test_knight_moves.py  test_pawn_moves.py  test_queen_moves.py  test_rook_moves.py
tests/utils/: test_algebraic_notation.py  test_fen_notation.py
utils/: FEN_notation.py  Forsyth_Edwards_notation.py  asset.py  commands.py  debug.py  forsyth_edwards_notation.py  network.py  portable_game_notation.py
(+9 files in other folders)
