[metadata]
name = pygame-chess
description = chess in pygame
author = Nicolas Parucker
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    chess
    chess.notation
    network
    network.client
    network.commands
    network.server
    chess.asset
    chess.board
    chess.game
    chess.movement
    chess.timer
    gui
    launcher
    launcher.pg
    launcher.tk
    launcher.tk.page
    launcher.tk.page.pages
    launcher.tk.components
    database
install_requires =
click==8.1.3
pygame==2.1.2

python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910

[options.package_data]
chess = py.typed
gui = py.typed
launcher = py.typed
launcher.pg = py.typed
launcher.tk = py.typed
launcher.tk.page = py.typed
launcher.tk.page.pages = py.typed
launcher.tk.page.components = py.typed
chess.notation = py.typed
network = py.typed
network.client = py.typed
network.commands = py.typed
network.server = py.typed
chess.asset = py.typed
chess.board = py.typed
chess.game = py.typed
chess.movement = py.typed
chess.timer = py.typed
config = py.typed
database = py.typed

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
check_untyped_defs = True