[metadata]
name = pygame-chess
description = chess in pygame
author = Nicolas Parucker
license = MIT
license_file = LICENSE


[options]
packages =
    chess
    network
    network.client
    network.commands
    network.server
    chess.asset
    chess.board
    chess.bot
    chess.game
    chess.timer
    gui
    launcher
    launcher.pg
    launcher.tk
    launcher.tk.page
    launcher.tk.page.pages
    launcher.tk.components
    database
install_requires =
    PyChessEngine @ git+https://github.com/NicolasPP/ChessEngine.git@c86a22bf80672d83a1c77e1926bbd9956736b7a9
click==8.1.3
pygame==2.1.2

python_requires = >=3.6
package_dir =
    =src
zip_safe = no


[options.package_data]
chess = py.typed
gui = py.typed
launcher = py.typed
launcher.pg = py.typed
launcher.tk = py.typed
launcher.tk.page = py.typed
launcher.tk.page.pages = py.typed
launcher.tk.page.components = py.typed
network = py.typed
network.client = py.typed
network.commands = py.typed
network.server = py.typed
chess.asset = py.typed
chess.board = py.typed
chess.bot = py.typed
chess.game = py.typed
chess.timer = py.typed
config = py.typed
database = py.typed

[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
check_untyped_defs = True