[metadata]
name = pygame-chess
description = chess in pygame
author = Nicolas Parucker
license = MIT
license_file = LICENSE


[options]
packages =
    chess
    chess.asset
    chess.board
    chess.bot
    chess.game
    chess.timer
    config
    database
    event
    gui
    launcher
    launcher.pg
    launcher.tk
    network
    network.client
    network.server


install_requires =
    PyChessEngine @ git+https://github.com/NicolasPP/ChessEngine.git@c86a22bf80672d83a1c77e1926bbd9956736b7a9
    click
    pygame

package_dir =
    =src
zip_safe = no


[options.package_data]
chess = py.typed
chess.asset = py.typed
chess.board = py.typed
chess.bot = py.typed
chess.game = py.typed
chess.timer = py.typed
config = py.typed
database = py.typed
event = py.typed
gui = py.typed
launcher = py.typed
launcher.pg = py.typed
launcher.tk = py.typed
network = py.typed
network.client = py.typed
network.server = py.typed



[flake8]
max-line-length = 160

[mypy]
ignore_missing_imports = True
check_untyped_defs = True